Refactor getting profile for current user.